fix particles and nav overlap

--- a/hexo-blog/themes/fluid/source/css/_pages/_base/_widget/header.styl
+++ b/hexo-blog/themes/fluid/source/css/_pages/_base/_widget/header.styl
@@ -2,6 +2,7 @@
 .navbar
   background-color transparent
   font-size 0.875rem
+  z-index 1030
   box-shadow 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
   -webkit-box-shadow 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
 
@@ -154,6 +155,8 @@
     line-height 2.5rem
 
 .banner-text
+  position relative
+  z-index 3
   color var(--subtitle-color)
   max-width calc(960px - 6rem)
   width 80%
