--- a/hexo-blog/themes/fluid/source/css/_pages/_base/_widget/toc.styl
+++ b/hexo-blog/themes/fluid/source/css/_pages/_base/_widget/toc.styl
@@ -71,5 +71,5 @@
 .sidebar
   position -webkit-sticky
   position sticky
-  top 2rem
-  padding 3rem 0
+  top 5.5rem
+  padding 1rem 0 3rem
