--- a/hexo-blog/themes/fluid/source/css/_pages/_base/base.styl
+++ b/hexo-blog/themes/fluid/source/css/_pages/_base/base.styl
@@ -81,8 +81,8 @@ i.iconfont
   height 100vh
   background transparent !important
   pointer-events none
-  z-index -1 !important
+  z-index 2 !important
 
-header, main, footer, .container
+main, footer
   position relative
-  z-index 9999
+  z-index 3
