--- a/hexo-blog/themes/fluid/source/css/_pages/_post/post-page.styl
+++ b/hexo-blog/themes/fluid/source/css/_pages/_post/post-page.styl
@@ -23,6 +23,9 @@
     opacity 0 !important
 
 .page-content, .post-content
+  h1, h2, h3, h4, h5, h6
+    scroll-margin-top 5.5rem
+
   strong
     font-weight bold
 
